Bug 290358 - Exported PDF do not honour page size
Summary: Exported PDF do not honour page size
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-02 00:04 UTC by rgb.mldc
Modified: 2012-02-12 00:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rgb.mldc 2012-01-02 00:04:49 UTC
Version:           2.4-snapshots
OS:                Linux

When you go to File → Export as PDF, no matter which is the image size the resulting PDF is an A4 page with the image on the top left corner. This happens even if I go to (I'm translating from Spanish...) Adjustments → Page configuration and select a custom page with the right size. 

Reproducible: Always

Steps to Reproduce:
1- Open an image with a non standard size, for example this file: http://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg 
2- Go to file → Export as PDF

Actual Results:  
Instead of obtaining a PDF file with a page size that match the image, you obtain a A4 page with the image on the top left corner

Expected Results:  
Exported PDF have a page size defined by the image size. 

This problem was first presented on the Calligra forum, where another user confirmed the behaviour:
http://forum.kde.org/viewtopic.php?f=203&t=98348
Comment 1 Jan Hambrecht 2012-02-12 00:05:33 UTC
Git commit 9790985094281c6ef6f5c3a86093a4e98145b98c by Jan Hambrecht.
Committed on 12/02/2012 at 01:06.
Pushed by jaham into branch 'master'.

when printing to pdf apply the current page size to the printer
also set the printer to use the full page

M  +7    -2    karbon/ui/KarbonPrintJob.cpp
M  +8    -1    karbon/ui/KarbonPrintJob.h
M  +6    -1    karbon/ui/KarbonView.cpp
M  +1    -0    karbon/ui/KarbonView.h

http://commits.kde.org/calligra/9790985094281c6ef6f5c3a86093a4e98145b98c