when printing to pdf apply the current page size to the printer also set the printer to use the full page

BUG:290358